--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": ">=5.4",
         "zendframework/zend-servicemanager": "2.3.*",
         "psr/log": "1.0.*",
         "monolog/monolog": "~1.12",
