--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "doctrine/annotations": "~1.2"
     },
      "require-dev": {
-        "phpunit/phpunit": "~4.0"        
+         "phpunit/phpunit" : ">=3.7.8",
+        "phpunit/phpunit-mock-objects" : "1.2.1"                
     },
     "autoload": {
         "psr-4": {"Api\\": "src/Api", "ApiTest\\" : "tests/Api"}
