--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "zendframework/zend-servicemanager": "2.3.*",
         "psr/log": "1.0.*",
         "monolog/monolog": "~1.12",
-        "doctrine/annotations": "~1.2"
+        "doctrine/annotations": "~1.2",
+        "zfr/rbac": "~1.2"
     },
      "require-dev": {
          "phpunit/phpunit" : ">=3.7.8",
