--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4",
-        "zendframework/zend-servicemanager": "2.*",
-		"zendframework/zend-cache": "2.*",
+		"zendframework/zend-cache": "~2.5",
         "psr/log": "1.0.*",
         "monolog/monolog": "~1.12",
-        "doctrine/annotations": "~1.2",
-        "zfr/rbac": "~1.2"
+        "doctrine/annotations": "~1.4",
+        "zfr/rbac": "~1.2",
+        "psr/container": "^1.0"
     },
      "require-dev": {
-         "phpunit/phpunit" : ">=3.7.8",
-        "phpunit/phpunit-mock-objects" : "1.2.1"                
+        "phpunit/phpunit" : "~6.0",
+        "phpunit/phpunit-mock-objects": "^4.0"
     },
     "autoload": {
         "psr-4": {"Api\\": "src/Api", "ApiTest\\" : "tests/Api"}
