--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "minimum-stability": "dev",
+    "version": "v0.9.1.1",
     "require": {
         "php": ">=5.4",
 		"zendframework/zend-cache": "~2.5",
@@ -28,7 +29,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "stable": "0.9.1.x"
         }
     }
 }
